--- a/cms/collections.html
+++ b/cms/collections.html
@@ -38,7 +38,7 @@
             <nav>
                 <ul>
                     <li><a href="home.html"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="manage_orders.html"><i class="fas fa-box"></i> Orders</a></li>
+                    <li><a href="create_orders.html"><i class="fas fa-box"></i> Orders</a></li>
                     <li class="has-sub-menu active"><a href="manage_products.html"><i class="fas fa-tags"></i> Products</a></li>
                     <li><a href="collections.html"><i class="fa-solid fa-boxes-stacked"></i>Collections</a></li>
                     <li><a href="newinventory.html"><i class="fas fa-warehouse"></i> Inventory</a></li>
