--- a/cms/manage_orders.html
+++ b/cms/manage_orders.html
@@ -75,7 +75,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr data-href="payment.html?id=10001">
+                            <tr data-href="order_details.html?id=10001">
                                 <td><input type="checkbox" class="order_checkbox"></td>
                                 <td>#10001</td>
                                 <td>Lorem ipsum</td>
@@ -83,7 +83,7 @@
                                 <td><span class="status paid">Paid</span></td>
                                 <td>$212</td>
                             </tr>
-                            <tr data-href="payment.html?id=10002">
+                            <tr data-href="order_details.html?id=10002">
                                 <td><input type="checkbox" class="order_checkbox"></td>
                                 <td>#10002</td>
                                 <td>Lorem ipsum</td>
@@ -91,7 +91,7 @@
                                 <td><span class="status paid">Paid</span></td>
                                 <td>$212</td>
                             </tr>
-                            <tr data-href="payment.html?id=10003">
+                            <tr data-href="order_details.html?id=10003">
                                 <td><input type="checkbox" class="order_checkbox"></td>
                                 <td>#10003</td>
                                 <td>Lorem ipsum</td>
@@ -99,7 +99,7 @@
                                 <td><span class="status paid">Paid</span></td>
                                 <td>$212</td>
                             </tr>
-                            <tr data-href="payment.html?id=10004">
+                            <tr data-href="order_details.html?id=10004">
                                 <td><input type="checkbox" class="order_checkbox"></td>
                                 <td>#10004</td>
                                 <td>Lorem ipsum</td>
@@ -107,7 +107,7 @@
                                 <td><span class="status paid">Paid</span></td>
                                 <td>$212</td>
                             </tr>
-                            <tr data-href="payment.html?id=10005">
+                            <tr data-href="order_details.html?id=10005">
                                 <td><input type="checkbox" class="order_checkbox"></td>
                                 <td>#10005</td>
                                 <td>Lorem ipsum</td>
