--- a/cms/newinventory.html
+++ b/cms/newinventory.html
@@ -57,7 +57,7 @@
             <header class="new-header">
                 <button class="new-tab active">All</button>
                 <div class="new-con-search">
-                    <input type="text" id="searchInput" class="search-bar" oninput="searchProducts()" placeholder="Search products..." style="display: none;">
+                    <input type="text" id="searchInput" class="new-search-bar" oninput="searchProducts()" placeholder="Search products..." style="display: none;">
                 <div class="new-filt-con">
                     <button class="new-search-btn" onclick="toggleSearchBar()"><i class="fas fa-search"></i></button>
                     <button class="new-filter-btn2" ><img src="images/SVGRepo_iconCarrier (6).png" alt=""></button>
